--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -46,7 +46,7 @@ $font-size-xlg: 1.5rem;
 $font-size-xxlg: 2rem;
 
 // Override fonts
-$font-family-sans-serif: 'Roboto', sans-serif;
+$font-family-sans-serif: 'Averta Std', sans-serif;
 $font-family-serif: Georgia, 'Times New Roman', Times, serif;
 $font-family-monospace: Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
 $font-family-base: $font-family-sans-serif;
