--- a/src/assets/components/_language-select.scss
+++ b/src/assets/components/_language-select.scss
@@ -2,6 +2,7 @@
     padding: 0.5625rem 2.5rem 0.5625rem 0.9375rem;
     height: 2.75rem;
     max-width: 100%;
+    color: theme-color("text-secondary");
 
     &:hover {
         border-color: theme-color("border-light");
