login and register buttons are now responsive

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -29,3 +29,4 @@
 @import "./components/language-select";
 @import "./components/header";
 @import "./components/partner-logo-list";
+@import "./components/login-register-buttons";
