promo banners added

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -30,3 +30,4 @@
 @import "./components/header";
 @import "./components/partner-logo-list";
 @import "./components/login-register-buttons";
+@import "./components/promo-banners";
