--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -40,7 +40,7 @@ $btn-padding-x-lg: 2.5rem;
 $btn-font-size-lg: 1rem;
 
 
-// $grid-gutter-width: 20px; // хубаво е тук да е в px, за да ако потребителя си променя шрифта, това да не промени разстоянието между елементите
+$grid-gutter-width: 1rem;
 
 // Font weight
 // $font-weight-semibold: 600;
