sports categories added

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -31,3 +31,4 @@
 @import "./components/partner-logo-list";
 @import "./components/login-register-buttons";
 @import "./components/promo-banners";
+@import "./components//sports-categories";
