--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -26,6 +26,7 @@
 
 
 // Custom components
+@import "./components/horizontal-scrollable-container";
 @import "./components/language-select";
 @import "./components/header";
 @import "./components/partners-logo-list";
