--- a/src/assets/components/_login-register-buttons.scss
+++ b/src/assets/components/_login-register-buttons.scss
@@ -1,5 +1,5 @@
 .login-register-buttons {
-    @include media-breakpoint-down(md) {
+    @include media-breakpoint-down(lg) {
         position: fixed;
         bottom: 0;
         left: 0;
