--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -34,3 +34,4 @@
 @import "./components/promo-banners";
 @import "./components/sports-categories";
 @import "./components/popular-themes";
+@import "./components/promotions-banners";
