--- a/src/assets/components/_partners-logo-list.scss
+++ b/src/assets/components/_partners-logo-list.scss
@@ -1,5 +1,5 @@
 .partners-logo-list {
-    @include media-breakpoint-down(md) {
+    @include media-breakpoint-down(lg) {
         display: none !important;
     }
 
