game providers added

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -35,3 +35,4 @@
 @import "./components/sports-categories";
 @import "./components/popular-themes";
 @import "./components/promotions-banners";
+@import "./components/game-providers";
