--- a/src/assets/components/_game-providers.scss
+++ b/src/assets/components/_game-providers.scss
@@ -13,7 +13,7 @@
         .game-provider-content {
             height: 3.75rem;
             width: 11rem;
-            background-color: rgb(255, 255, 255);
+            background-color: $white;
             border-radius: 4px;
             padding: 1rem;
 
