--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -26,6 +26,7 @@
 
 
 // Custom components
+@import "./components/body";
 @import "./components/horizontal-scrollable-container";
 @import "./components/language-select";
 @import "./components/header";
@@ -36,3 +37,4 @@
 @import "./components/popular-themes";
 @import "./components/promotions-banners";
 @import "./components/game-providers";
+@import "./components/footer";
