payment icons added

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -38,3 +38,4 @@
 @import "./components/promotions-banners";
 @import "./components/game-providers";
 @import "./components/footer";
+@import "./components/payment-icons";
