added custom arrow to language select

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -20,6 +20,7 @@
 @import "bootstrap-components/navbar";
 @import "bootstrap-components/container";
 @import "bootstrap-components/buttons";
+@import "bootstrap-components/custom-forms";
 
 // Font awesome
 @import "~font-awesome/scss/font-awesome";
